--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=neia
 DB_NAME=control_qr
+DATABASE_URL=postgresql://control_qr_user:QPCMajz9V4C7XZk2UFHb8LsFQhedh5rY@dpg-d18cas3uibrs738eqkrg-a.oregon-postgres.render.com/control_qr
+DB_USER=control_qr_user
+DB_PASSWORD=QPCMajz9V4C7XZKz2UFHb8LsFQhedh5rY
+DB_HOST=dpg-d18cas3uibrs738eqkrg-a.oregon-postgres.render.com
+DB_PORT=5432
 DB_DIALECT=postgres
